hphp/hack/test/typecheck/type_structure/as_generic.php.like_types.exp
File "as_generic.php", line 5, characters 3-22:
  ~HH\TypeStructureKind
File "as_generic.php", line 6, characters 3-36:
  ?nothing
File "as_generic.php", line 7, characters 3-35:
  ?nothing
File "as_generic.php", line 8, characters 3-40:
  ?nothing
File "as_generic.php", line 9, characters 3-42:
  ?nothing
File "as_generic.php", line 10, characters 3-42:
  ?nothing
File "as_generic.php", line 11, characters 3-39:
  ?nothing
File "as_generic.php", line 12, characters 3-41:
  ?nothing
File "as_generic.php", line 13, characters 3-37:
  ?nothing
File "as_generic.php", line 14, characters 3-44:
  ?nothing
File "as_generic.php", line 6, characters 23-25:
Invalid argument (Typing[4110])
File "as_generic.php", line 6, characters 23-25:
Expected shape(?'alias' => [unresolved], ...) because Shapes::idx expects a shape
File "typestructure.hhi", line 54, characters 29-747:
But got dynamic because it is an unenforceable type
